html layout for header is completed manually.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Scheme Generator</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <input type="color" name="" id="" />
+      <select id="colors">
+        <option value="monochrome">Monochrome</option>
+        <option value="monochrome-dark">Monochrome-dark</option>
+        <option value="monochrome-light">Monochrome-light</option>
+        <option value="analogic">Analogic</option>
+        <option value="complement">Complement</option>
+        <option value="analogic-complement">Analogic-complement</option>
+        <option value="triad">Triad</option>
+      </select>
+      <button class="get-color-scheme">Get color scheme</button>
+    </header>
+  </body>
 </html>
