added main and footer tag in html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
       </select>
       <button class="get-color-scheme">Get color scheme</button>
     </header>
+    <main class="main-section">
+      <!-- colors will render here -->
+    </main>
+    <footer class="footer-section">
+      <!-- Hex color code will render here -->
+    </footer>
   </body>
 </html>
