hex color's value is logging on the console when user change the color using their mouse.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <input type="color" name="" id="" />
+      <input type="color" name="seed-color" id="seed-color" />
       <select id="colors">
         <option value="monochrome">Monochrome</option>
         <option value="monochrome-dark">Monochrome-dark</option>
@@ -26,5 +26,6 @@
     <footer class="footer-section">
       <!-- Hex color code will render here -->
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
