1. Render the color, hex values, color's name on the page. 2. Styled the layout roughly.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Scheme Generator</title>
+
+    <!-- Link for Stylesheet -->
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <header class="header">
@@ -28,9 +31,6 @@
     <main class="main-section">
       <!-- colors will render here -->
     </main>
-    <footer class="footer-section">
-      <!-- Hex color code will render here -->
-    </footer>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
