--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Scheme Generator</title>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Link for Stylesheet -->
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <header class="header">
-      <input
-        type="color"
-        name="seed-color"
-        id="seed-color"
-        data-color-scheme="color-scheme"
-      />
-      <select id="color-scheme" data-color-scheme="color-scheme">
+    <header class="header-section">
+      <input type="color" name="seed-color" class="seed-color" />
+      <select class="color-scheme">
         <option value="monochrome">Monochrome</option>
         <option value="monochrome-dark">Monochrome-dark</option>
         <option value="monochrome-light">Monochrome-light</option>
@@ -26,11 +29,13 @@
         <option value="analogic-complement">Analogic-complement</option>
         <option value="triad">Triad</option>
       </select>
-      <button id="get-color-scheme">Get color scheme</button>
+      <button class="get-color-scheme-btn">Get color scheme</button>
     </header>
+
     <main class="main-section">
       <!-- colors will render here -->
     </main>
+
     <script src="js/index.js" type="module"></script>
   </body>
 </html>
